--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -869,7 +869,14 @@
                                     {
                                         
                                         <div class="btn-group me-1" role="group" aria-label="Button group with nested dropdown">
-                                            @if(context.DeliveryMethod==DeliveryMethod.PostOffice||context.DeliveryMethod==DeliveryMethod.BlackCat1||context.DeliveryMethod==DeliveryMethod.BlackCatFreeze||context.DeliveryMethod==DeliveryMethod.BlackCatFrozen)
+                                            @if (
+                                                context.DeliveryMethod is DeliveryMethod.FamilyMartC2C || 
+                                                context.DeliveryMethod is DeliveryMethod.SevenToElevenC2C ||
+                                                context.DeliveryMethod is DeliveryMethod.PostOffice ||
+                                                context.DeliveryMethod is DeliveryMethod.BlackCat1 ||
+                                                context.DeliveryMethod is DeliveryMethod.BlackCatFreeze ||
+                                                context.DeliveryMethod is DeliveryMethod.BlackCatFrozen
+                                            )
                                             {
                                                 <Button Type="ButtonType.Button" Clicked="()=>CreateOrderLogistics(context)" Class="btn btn-primary">@L["ShipmentNotify"]</Button>
                                             }
